results/SVCOMP/specgen/log-StringIndexMethods01-2024_03_02_15_55_02.txt
public class StringIndexMethods01 {
  //@ requires letters != null;
  //@ ensures \result == 8;
  public static void main(String[] args) {
    String letters = "automatictestcasegenerationatdiffblue";

    assert letters.indexOf('c') == 8;
    //@ assert letters.indexOf('a', 1) == 5;
    assert letters.indexOf('$') == -1;
    assert letters.lastIndexOf('c') == 13;
    //@ assert letters.lastIndexOf('a', 25) == 22;
    assert letters.lastIndexOf('$') == -1;
    assert letters.indexOf("diffblue") == 29;
    //@ assert letters.indexOf("diffblue", 7) == 29;
    assert letters.indexOf("generation") == 17;
    assert letters.lastIndexOf("diffblue") == 29;
    //@ assert letters.lastIndexOf("diffblue", 25) == -1;
    assert letters.lastIndexOf("automatic") == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/StringIndexMethods01.java:2: error: cannot find symbol
  //@ requires letters != null;
               ^
  symbol:   variable letters
  location: class StringIndexMethods01
/home/max/Documents/JMLGPT/tmp/StringIndexMethods01.java:3: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == 8;
               ^
2 errors

public class StringIndexMethods01 {
  //@ requires true;
  //@ ensures true;
  public static void main(String[] args) {
    String letters = "automatictestcasegenerationatdiffblue";

    assert letters.indexOf('c') == 8;
    //@ assert letters.indexOf('a', 1) == 5;
    assert letters.indexOf('$') == -1;
    assert letters.lastIndexOf('c') == 13;
    //@ assert letters.lastIndexOf('a', 25) == 22;
    assert letters.lastIndexOf('$') == -1;
    assert letters.indexOf("diffblue") == 29;
    //@ assert letters.indexOf("diffblue", 7) == 29;
    assert letters.indexOf("generation") == 17;
    assert letters.lastIndexOf("diffblue") == 29;
    //@ assert letters.lastIndexOf("diffblue", 25) == -1;
    assert letters.lastIndexOf("automatic") == 0;
  }
}
